syntax = "proto3";

package v1.aspbv1;

import "v1/nfpb/msg_meta.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/aspb;aspbv1";

message CreateAnimeEpisodeMetasRequest {
  int64    episodeID                            = 1;
  repeated nfpbv1.AnimeMetaRequest episodeMetas = 2;
}

message CreateAnimeEpisodeMetasResponse {
  int64    episodeID                             = 1;
  repeated nfpbv1.AnimeMetaResponse episodeMetas = 2;
}